feat: add WhereBuilder condition overloads, InsertSpec/Builder, executor save/updateById/deleteById, no-hardcode generator
Agent-Logs-Url: https://github.com/jsbxyyx/jpa-dsl/sessions/ef5f81f9-2637-417c-94b8-e52c85ae92eb

Co-authored-by: jsbxyyx <26616196+jsbxyyx@users.noreply.github.com>