@@ -1,9 +1,14 @@
 package io.github.jsbxyyx.jdbcdsl;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
 /**
  * The result of SQL rendering: a parameterized SQL string and its named parameters.
+ *
+ * <p>Parameter values may be {@code null} (e.g. when a WHERE predicate is added with
+ * {@code condition=true} and a {@code null} value).
  */
 public final class RenderedSql {
 
@@ -12,7 +17,8 @@ public final class RenderedSql {
 
     public RenderedSql(String sql, Map<String, Object> params) {
         this.sql = sql;
-        this.params = Map.copyOf(params);
+        // Use LinkedHashMap copy to preserve insertion order and allow null values
+        this.params = Collections.unmodifiableMap(new LinkedHashMap<>(params));
     }
 
     public String getSql() {
